--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -1,25 +1,60 @@
 .adv {
   @media (min-width: $tablet-width) {
-    background-image: url(../../img/decoration/clouds-3-m.png);
-    background-size: cover;
-    background-position: left top 166px;
-    background-repeat: no-repeat;
+    position: relative;
 
-    @supports (background-image: url("../../img/decoration/clouds-3-m.webp")) {
-      background-image: url("../../img/decoration/clouds-3-m.webp");
-    }
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 166px;
+      min-width: 768px;
+      min-height: 996px;
 
-    @media (resolution >=2dppx) {
-      background-image: url("../../img/decoration/clouds-3-2x-m.png");
+      background-image: url("../../img/decoration/clouds-3-m.png");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
 
-      @supports (background-image: url("../../img/decoration/clouds-3-2x-m.webp")) {
-        background-image: url("../../img/decoration/clouds-3-2x-m.webp");
+      @supports (background-image: url("../../img/decoration/clouds-3-m.webp")) {
+        background-image: url("../../img/decoration/clouds-3-m.webp");
+      }
+
+      @media (resolution >=2dppx) {
+        background-image: url("../../img/decoration/clouds-3-2x-m.png");
+
+        @supports (background-image: url("../../img/decoration/clouds-3-2x-m.webp")) {
+          background-image: url("../../img/decoration/clouds-3-2x-m.webp");
+        }
       }
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: none;
+    &::before {
+      top: -281px;
+      min-width: 1440px;
+      min-height: 447px;
+      background-image: url("../../img/decoration/clouds-3-l.png");
+      background-repeat: no-repeat;
+
+      @supports (background-image: url("../../img/decoration/clouds-3-l.webp")) {
+        background-image: url("../../img/decoration/clouds-3-l.webp");
+      }
+
+      @media (resolution >=2dppx) {
+        background-image: url("../../img/decoration/clouds-3-2x-l.png");
+
+        @supports (background-image: url("../../img/decoration/clouds-3-2x-l.webp")) {
+          background-image: url("../../img/decoration/clouds-3-2x-l.webp");
+        }
+      }
+    }
+  }
+}
+
+.adv__content-wrapper {
+  @media (min-width: $desktop-width) {
     overflow: hidden;
   }
 }
@@ -70,10 +105,6 @@
     margin-right: auto;
     overflow: visible;
   }
-}
-
-.adv__swiper-wrapper {
-  @media (min-width: $desktop-width) {}
 }
 
 .adv__swiper--non-slider .adv__swiper-wrapper {
