--- a/source/sass/blocks/review-slide.scss
+++ b/source/sass/blocks/review-slide.scss
@@ -5,8 +5,9 @@
   padding: 20px;
   font-size: 12px;
   line-height: 18px;
+  background-color: $base-light;
 
-  box-shadow: 0px 0px 20px rgba(28, 51, 116, 0.10);
+  box-shadow: 0 0 20px rgba(28, 51, 116, 0.1);
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 186px 299px;
@@ -22,8 +23,6 @@
     line-height: 22px;
   }
 }
-
-// .review-slide__photo {}
 
 .review-slide__content {
   display: flex;
