--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -1,53 +1,71 @@
 .tours {
-  background-image: url("../../img/decoration/clouds-1-s.png");
-  background-size: 141px 595px;
-  background-repeat: no-repeat;
-  background-position: right top 10px;
+  position: relative;
 
-  @supports (background-image: url("../../img/decoration/clouds-1-s.webp")) {
-    background-image: url("../../img/decoration/clouds-1-s.webp");
-  }
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    right: 0;
+    top: 10px;
+    display: block;
+    width: 141px;
+    height: 595px;
 
-  @media (resolution >=2dppx) {
-    background-image: url("../../img/decoration/clouds-1-2x-s.png");
+    background-image: url("../../img/decoration/clouds-1-s.png");
+    background-size: 141px 595px;
+    background-repeat: no-repeat;
+    background-position: center;
 
-    @supports (background-image: url("../../img/decoration/clouds-1-2x-s.webp")) {
-      background-image: url("../../img/decoration/clouds-1-2x-s.webp");
-    }
-  }
-
-  @media (min-width: $tablet-width) {
-    background-image: url(../../img/decoration/clouds-1-m.png);
-    background-size: 425px 1630px;
-    background-position: right top -92px;
-
-    @supports (background-image: url("../../img/decoration/clouds-1-m.webp")) {
-      background-image: url("../../img/decoration/clouds-1-m.webp");
+    @supports (background-image: url("../../img/decoration/clouds-1-s.webp")) {
+      background-image: url("../../img/decoration/clouds-1-s.webp");
     }
 
     @media (resolution >=2dppx) {
-      background-image: url("../../img/decoration/clouds-1-2x-m.png");
+      background-image: url("../../img/decoration/clouds-1-2x-s.png");
 
-      @supports (background-image: url("../../img/decoration/clouds-1-2x-m.webp")) {
-        background-image: url("../../img/decoration/clouds-1-2x-m.webp");
+      @supports (background-image: url("../../img/decoration/clouds-1-2x-s.webp")) {
+        background-image: url("../../img/decoration/clouds-1-2x-s.webp");
       }
     }
-  }
 
-  @media (min-width: $desktop-width) {
-    background-image: url(../../img/decoration/clouds-1-l.png);
-    background-size: 602px 1630px;
-    background-position: right top -126px;
+    @media (min-width: $tablet-width) {
+      top: -92px;
+      width: 425px;
+      height: 1630px;
 
-    @supports (background-image: url("../../img/decoration/clouds-1-l.webp")) {
-      background-image: url("../../img/decoration/clouds-1-l.webp");
+      background-image: url("../../img/decoration/clouds-1-m.png");
+      background-size: 425px 1630px;
+
+      @supports (background-image: url("../../img/decoration/clouds-1-m.webp")) {
+        background-image: url("../../img/decoration/clouds-1-m.webp");
+      }
+
+      @media (resolution >=2dppx) {
+        background-image: url("../../img/decoration/clouds-1-2x-m.png");
+
+        @supports (background-image: url("../../img/decoration/clouds-1-2x-m.webp")) {
+          background-image: url("../../img/decoration/clouds-1-2x-m.webp");
+        }
+      }
     }
 
-    @media (resolution >=2dppx) {
-      background-image: url("../../img/decoration/clouds-1-2x-l.png");
+    @media (min-width: $desktop-width) {
+      top: -126px;
+      width: 602px;
 
-      @supports (background-image: url("../../img/decoration/clouds-1-2x-l.webp")) {
-        background-image: url("../../img/decoration/clouds-1-2x-l.webp");
+      background-image: url("../../img/decoration/clouds-1-l.png");
+      background-size: 602px 1630px;
+
+      @supports (background-image: url("../../img/decoration/clouds-1-l.webp")) {
+        background-image: url("../../img/decoration/clouds-1-l.webp");
+      }
+
+      @media (resolution >=2dppx) {
+        background-image: url("../../img/decoration/clouds-1-2x-l.png");
+
+        @supports (background-image: url("../../img/decoration/clouds-1-2x-l.webp")) {
+          background-image: url("../../img/decoration/clouds-1-2x-l.webp");
+        }
       }
     }
   }
@@ -96,7 +114,7 @@
     display: flex;
     position: absolute;
     top: 25px;
-    right: 0px;
+    right: 0;
 
     &--prev {
       left: unset;
@@ -106,15 +124,13 @@
 
   @media (min-width: $desktop-width) {
     top: 25px;
-    right: 0px;
+    right: 0;
 
     &--prev {
       right: 41px;
     }
   }
 }
-// .tours__swiper-wrapper {}
-// .tours__slide {}
 
 .tours__link {
   display: block;
