--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,50 +1,49 @@
 /* VENDOR */
-@import "vendor/normalize.scss";
-@import "vendor/swiper.scss";
-@import "vendor/swiper-vars.scss";
-@import "vendor/navigation.scss";
+@import "vendor/normalize";
+@import "vendor/swiper";
+@import "vendor/swiper-vars";
+@import "vendor/navigation";
 
 /* GLOBAL */
-@import "./common/mixins.scss";
-@import "./common/fonts.scss";
-@import "./common/variables.scss";
-@import "./common/global.scss";
+@import "./common/mixins";
+@import "./common/fonts";
+@import "./common/variables";
+@import "./common/global";
 
 /* BLOCKS */
 // SUPPORTIVE
-@import "./blocks/container.scss";
-@import "./blocks/primary-title.scss";
-@import "./blocks/primary-button.scss";
-@import "./blocks/primary-slider-button.scss";
-@import "./blocks/visually-hidden.scss";
+@import "./blocks/container";
+@import "./blocks/primary-title";
+@import "./blocks/primary-button";
+@import "./blocks/primary-slider-button";
+@import "./blocks/visually-hidden";
 
 // STRUCTURE
-@import "./blocks/page-body.scss";
-@import "./blocks/header.scss";
-@import "./blocks/page-main.scss";
-@import "./blocks/main-nav.scss";
-@import "./blocks/main-footer.scss";
+@import "./blocks/page-body";
+@import "./blocks/header";
+@import "./blocks/page-main";
+@import "./blocks/main-nav";
+@import "./blocks/main-footer";
 
 // SECTIONS
-@import "./blocks/hero.scss";
-@import "./blocks/tours.scss";
-@import "./blocks/training.scss";
-@import "./blocks/about.scss";
-@import "./blocks/reviews.scss";
-@import "./blocks/adv.scss";
-@import "./blocks/gallery.scss";
-@import "./blocks/form.scss";
-@import "./blocks/contacts.scss";
+@import "./blocks/hero";
+@import "./blocks/tours";
+@import "./blocks/training";
+@import "./blocks/about";
+@import "./blocks/reviews";
+@import "./blocks/adv";
+@import "./blocks/gallery";
+@import "./blocks/form";
+@import "./blocks/contacts";
 
 // SUBBLOCKS
-@import "./blocks/logo.scss";
-@import "./blocks/burger.scss";
-@import "./blocks/overlay.scss";
-@import "./blocks/promo-slide.scss";
-@import "./blocks/tour-slide.scss";
-@import "./blocks/trainer-card.scss";
-@import "./blocks/review-slide.scss";
-@import "./blocks/adv-slide.scss";
-@import "./blocks/form-field.scss";
-@import "./blocks/contact.scss";
-@import "./blocks/socials.scss";
+@import "./blocks/burger";
+@import "./blocks/overlay";
+@import "./blocks/promo-slide";
+@import "./blocks/tour-slide";
+@import "./blocks/trainer-card";
+@import "./blocks/review-slide";
+@import "./blocks/adv-slide";
+@import "./blocks/form-field";
+@import "./blocks/contact";
+@import "./blocks/socials";
