--- a/source/sass/blocks/burger.scss
+++ b/source/sass/blocks/burger.scss
@@ -4,6 +4,7 @@
   align-items: center;
   width: 26px;
   height: 26px;
+  padding: 0;
   border: none;
   color: $base-light;
   background-color: transparent;
