--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -60,7 +60,7 @@
 }
 
 .adv__container {
-  padding-top: 36px;
+  padding-top: 37px;
   padding-bottom: 20px;
 
   @media (min-width: $tablet-width) {
@@ -75,7 +75,13 @@
 
 .adv__title {
   margin: 0;
-  margin-bottom: 37px;
+  margin-bottom: 35px;
+  text-align: center;
+
+  &::before {
+    left: 50%;
+    transform: translate(-50%, 0);
+  }
 
   @media (min-width: $tablet-width) {
     margin-bottom: 60px;
@@ -87,12 +93,9 @@
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 50px;
-    text-align: center;
 
     &::before {
       bottom: 15px;
-      left: 50%;
-      transform: translate(-50%, 0);
     }
   }
 }
@@ -110,7 +113,7 @@
 .adv__swiper--non-slider .adv__swiper-wrapper {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 15px;
+  gap: 13px;
 
   @media (min-width: $tablet-width) {
     grid-template-columns: 1fr 1fr;
