--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -63,9 +63,11 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  justify-content: center;
   align-items: center;
+  min-height: 638px;
   text-align: center;
-  padding: 174px 31px;
+  padding: 31px;
 
   @media (min-width: $tablet-width) {
     padding: 184px 204px;
@@ -116,7 +118,7 @@
 .form__fields {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 9px;
   width: 258px;
 
   @media (min-width: $tablet-width) {
@@ -145,6 +147,7 @@
 }
 
 .form__submit {
+  padding: 22px 20px 20px;
   width: 100%;
 
   @media (min-width: $desktop-width) {
