--- a/source/sass/blocks/trainer-card.scss
+++ b/source/sass/blocks/trainer-card.scss
@@ -5,7 +5,7 @@
   align-content: start;
   width: 290px;
   height: 356px;
-  padding: 15px;
+  padding: 11px 14px;
   background-color: $base-light;
   border: 1px solid $accent-border-color;
 
