--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -72,7 +72,7 @@
     background-color: $light-05;
   }
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     width: 20px;
     height: 20px;
 
