--- a/source/sass/blocks/overlay.scss
+++ b/source/sass/blocks/overlay.scss
@@ -1,11 +1,12 @@
 .overlay {
-  height: auto;
+  display: none;
 
   &--is-open {
     position: absolute;
     top: 100%;
     left: 0;
     z-index: 2;
+    display: block;
     height: 100vh;
     width: 100vw;
     background-color: $burger-overlay;
