--- a/source/sass/blocks/review-slide.scss
+++ b/source/sass/blocks/review-slide.scss
@@ -34,7 +34,8 @@
   margin-bottom: 15px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 25px;
+    margin-top: -1px;
+    margin-bottom: 26px;
   }
 
   @media (min-width: $desktop-width) {
