--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -30,6 +30,7 @@
   @media (min-width: $tablet-width) {
     align-self: center;
     margin: 0;
+    margin-top: -62px;
     min-width: 450px;
     margin-left: calc(-1 * (((100vw - $tablet-width) / 2) + 45px));
     max-width: calc((100vw - 270px - 45px) - (100vw - $tablet-width) / 2);
@@ -70,7 +71,8 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 46px;
+    margin-bottom: 48px;
+    margin-left: -3px;
 
     font-size: 25px;
     line-height: 25px;
@@ -101,6 +103,8 @@
   @include font-set(16px, 16px, 700);
 
   @media (min-width: $tablet-width) {
+    margin-left: -3px;
+    margin-bottom: 12px;
     font-size: 18px;
     line-height: 18px;
   }
@@ -115,6 +119,6 @@
   margin: 0;
 
   &:not(:last-child) {
-    margin-bottom: 25px;
+    margin-bottom: 28px;
   }
 }
