--- a/source/sass/blocks/adv-slide.scss
+++ b/source/sass/blocks/adv-slide.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 290px;
-  padding: 20px 10px;
+  padding: 20px 9px;
 
   font-size: 12px;
   line-height: 18px;
@@ -43,15 +43,67 @@
     background-image: url("/__spritemap#sprite-leaf-view");
   }
 
+  &--awareness br:nth-of-type(2),
+  &--awareness br:nth-of-type(3) {
+    display: none;
+  }
+
+  &--equipment br:nth-of-type(3) {
+    display: none;
+  }
+
+  &--routesbr:nth-of-type(1) {
+    display: none;
+  }
+  &--routesbr:nth-of-type(2) {
+    display: inline;
+  }
+
   @media (min-width: $tablet-width) {
     width: 324px;
     height: 340px;
-    padding: 30px 20px;
+    padding: 29px 19px;
     font-size: 14px;
     line-height: 22px;
 
     &::before {
+      width: 52px;
+      height: 50px;
       margin-bottom: 25px;
+      background-size: 52px 49px;
+    }
+
+    &--safe br {
+      display: none;
+    }
+
+    &--awareness br {
+      display: none;
+    }
+
+    &--awareness br:nth-of-type(2),
+    &--awareness br:nth-of-type(3),
+    &--awareness br:nth-of-type(5) {
+      display: inline;
+    }
+
+    &--equipment br:nth-of-type(4) {
+      display: none;
+    }
+
+    &--equipment br:nth-of-type(3) {
+      display: inline;
+    }
+
+    &--routesbr:nth-of-type(1) {
+      display: inline;
+    }
+    &--routesbr:nth-of-type(2) {
+      display: none;
+    }
+
+    &--nature::before {
+
     }
   }
 
@@ -73,6 +125,7 @@
   @include font-set(14px, 14px, 600);
 
   @media (min-width: $tablet-width) {
+    margin-bottom: 14px;
     font-size: 16px;
     line-height: 16px;
   }
