--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,10 +1,10 @@
 .contacts__container {
-  padding-top: 36px;
-  padding-bottom: 20px;
+  padding-top: 37px;
+  padding-bottom: 19px;
 
   @media (min-width: $tablet-width) {
     padding-top: 60px;
-    padding-bottom: 40px;
+    padding-bottom: 39px;
   }
 
   @media (min-width: $desktop-width) {
@@ -18,10 +18,10 @@
 
 .contacts__title {
   margin: 0;
-  margin-bottom: 29px;
+  margin-bottom: 28px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 20px;
+    margin-bottom: 21px;
   }
 
   @media (min-width: $desktop-width) {
@@ -35,6 +35,7 @@
   margin-bottom: 30px;
 
   @media (min-width: $tablet-width) {
+    max-width: 500px;
     margin-bottom: 40px;
   }
 
@@ -53,8 +54,8 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
-    gap: 40px;
-    margin-bottom: 40px;
+    gap: 41px;
+    margin-bottom: 39px;
   }
 
   @media (min-width: $desktop-width) {
