--- a/source/sass/blocks/promo-slide.scss
+++ b/source/sass/blocks/promo-slide.scss
@@ -29,8 +29,9 @@
 
 
   @media (min-width: $tablet-width) {
+    align-items: center;
     min-height: 1034px;
-    padding-top: 100px;
+    padding-top: 40px;
     padding-bottom: 100px;
   }
 
@@ -44,6 +45,7 @@
 .promo-slide__container--kamchatka {
   @media (min-width: $tablet-width) {
     justify-content: start;
+    padding-top: 100px;
 
     &::after {
       content: "";
@@ -106,6 +108,7 @@
   @include font-set(26px, 26px, 800);
 
   @media (min-width: $tablet-width) {
+    margin-bottom: 13px;
     font-size: 56px;
     line-height: 56px;
   }
@@ -129,7 +132,8 @@
   margin-bottom: 60px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 35px;
+    max-width: 583px;
+    margin-bottom: 37px;
   }
 
   @media (min-width: $desktop-width) {
@@ -140,6 +144,11 @@
 .promo-slide__link {
   align-self: center;
   min-width: 180px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 21px;
+    padding-bottom: 19px;
+  }
 
   @media (min-width: $desktop-width) {
     align-self: start;
