--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -98,7 +98,8 @@
   margin-bottom: 25px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 60px;
+    padding-top: 70px;
+    margin-bottom: 27px;
   }
 
   @media (min-width: $desktop-width) {
@@ -113,7 +114,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     position: absolute;
-    top: 25px;
+    top: 32px;
     right: 0;
 
     &--prev {
