--- a/source/sass/blocks/trainer-card.scss
+++ b/source/sass/blocks/trainer-card.scss
@@ -31,6 +31,10 @@
   margin: 0;
 
   @include font-set(14px, 16px, 700);
+
+  @media (min-width: $tablet-width) {
+    margin-top: 1px;
+  }
 }
 
 .trainer-card p {
