--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -60,7 +60,7 @@
   padding-bottom: 20px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 40px;
+    padding-top: 60px;
   }
 
   @media (min-width: $desktop-width) {
@@ -72,7 +72,7 @@
   margin-bottom: 33px;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 36px;
+    margin-bottom: 34px;
   }
 
   @media (min-width: $desktop-width) {
@@ -84,8 +84,20 @@
   margin: 0;
   margin-bottom: 29px;
 
+  @media (min-width: $tablet-width) {
+    margin-bottom: 30px;
+  }
+
   @media (min-width: $desktop-width) {
     margin-bottom: 56px;
+  }
+}
+
+.training p br {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    display: inline;
   }
 }
 
@@ -102,7 +114,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 104px;
+    margin-bottom: 101px;
 
     font-size: 18px;
     line-height: 18px;
@@ -132,7 +144,8 @@
   margin-bottom: 23px;
 
   @media (min-width: $tablet-width) {
-    padding-top: 65px;
+    padding-top: 75px;
+    margin-bottom: 24px;
   }
 
   @media (min-width: $desktop-width) {
@@ -147,7 +160,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     position: absolute;
-    top: 30px;
+    top: 29px;
     right: 0;
 
     &--prev {
@@ -188,8 +201,8 @@
   }
 
   @media (min-width: $tablet-width) {
-    grid-template-columns: 232px 272px;
-    gap: 104px 174px;
+    grid-template-columns: 237px 264px;
+    gap: 104px 169px;
 
     font-size: 14px;
     line-height: 22px;
@@ -270,10 +283,30 @@
 
   @media (min-width: $tablet-width) {
     padding-left: 0;
-    gap: 19px;
+    gap: 10px;
 
     &::after {
       display: none;
+    }
+
+    &::before {
+      margin-top: 1px;
+    }
+
+    &:first-child {
+      order: 1;
+    }
+
+    &:nth-child(2) {
+      order: 3;
+    }
+
+    &:nth-child(3) {
+      order: 4;
+    }
+
+    &:nth-child(4) {
+      order: 2;
     }
   }
 
