--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -22,7 +22,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 119px;
+    padding-top: 123px;
   }
 }
 
@@ -35,7 +35,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 27px;
+    margin-bottom: 24px;
   }
 }
 
@@ -49,8 +49,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 400px;
-    margin-bottom: 46px;
+    width: 600px;
+    margin-bottom: 45px;
   }
 }
 
@@ -59,6 +59,10 @@
 
   @media (min-width: $tablet-width) {
     display: inline;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
 
@@ -73,8 +77,9 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: -120px;
+    margin-right: -120px;
+    padding-top: 0;
   }
 }
 
