--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -11,8 +11,8 @@
     display: grid;
     grid-template-columns: 500px 600px;
     gap: 0 100px;
-    padding-top: 119px;
-    padding-bottom: 95px;
+    padding-top: 123px;
+    padding-bottom: 55px;
   }
 }
 
@@ -26,7 +26,7 @@
 
   @media (min-width: $desktop-width) {
     grid-column: 1/2;
-    margin-bottom: 25px;
+    margin-bottom: 24px;
   }
 }
 
@@ -61,7 +61,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 1/2;
     flex-direction: column;
-    gap: 35px;
+    gap: 37px;
   }
 }
 
@@ -81,10 +81,10 @@
   @media (min-width: $desktop-width) {
     grid-column: 2/3;
     grid-row: 1/4;
-    align-self: center;
     width: 600px;
     height: 324px;
     margin: 0;
+    margin-top: 26px;
     overflow: unset;
   }
 }
