--- a/source/sass/blocks/form-field.scss
+++ b/source/sass/blocks/form-field.scss
@@ -29,6 +29,10 @@
   @media (min-width: $tablet-width) {
     padding: 19px 30px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 18px 30px;
+  }
 }
 
 .form-field__inp:focus {
