--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -31,7 +31,7 @@
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 200px 1fr 200px;
-    gap: 22px 0;
+    gap: 20px 0;
     padding-top: 32px;
     padding-bottom: 32px;
   }
@@ -62,6 +62,7 @@
 
   @media (min-width: $desktop-width) {
     gap: 20px;
+    justify-self: unset;
   }
 }
 
