--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -64,7 +64,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 59px;
+    padding-top: 64px;
   }
 }
 
@@ -76,7 +76,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 38px;
+    margin-bottom: 31px;
   }
 }
 
@@ -89,7 +89,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 56px;
+    max-width: 870px;
+    margin-bottom: 62px;
   }
 }
 
@@ -98,6 +99,10 @@
 
   @media (min-width: $tablet-width) {
     display: inline;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: none;
   }
 }
 
@@ -128,12 +133,13 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 23px;
+    margin-bottom: 26px;
 
     font-size: 21px;
     line-height: 21px;
 
     &:first-of-type {
+      margin-bottom: -35px;
       font-size: 35px;
       line-height: 35px;
     }
@@ -149,7 +155,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding-top: 55px;
+    padding-top: 54px;
     margin-bottom: 56px;
   }
 }
@@ -170,7 +176,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    top: 20px;
+    top: 18px;
     right: 0;
 
     &--prev {
@@ -308,11 +314,19 @@
     &:nth-child(4) {
       order: 2;
     }
+
+    &:nth-child(3) br {
+      display: none;
+    }
+
+    &:nth-child(4) br:first-of-type {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop-width) {
     padding-left: 10px;
-    padding-bottom: 38px;
+    padding-bottom: 23px;
     gap: 10px;
 
     &::after {
@@ -320,6 +334,31 @@
       top: unset;
       left: 20px;
       bottom: 0;
+    }
+
+    &:first-child {
+      order: unset;
+    }
+
+    &:nth-child(2) {
+      order: unset;
+    }
+
+    &:nth-child(3) {
+      order: unset;
+    }
+
+    &:nth-child(4) {
+      order: unset;
+    }
+
+    &:nth-child(3) br,
+    &:nth-child(4) br:first-of-type {
+      display: inline;
+    }
+
+    &:nth-child(4) br:nth-of-type(2) {
+      display: none;
     }
   }
 }
